Plank 2018 cosmology used as default in CosmicCalculator
With the publication of the finall full-mission Plank measurements, the
default cosmological parameters in CosmicCalculator have been updated to
correspond to it.

--- a/bin/cosmiccal/astcosmiccal.conf
+++ b/bin/cosmiccal/astcosmiccal.conf
@@ -22,20 +22,20 @@
 # ========
 #
 # The current default cosmological values in CosmicCalculator are taken
-# from the Planck 2015 results (paper XIII, A&A 594, A13 (2016), Table 4,
-# page 31, last column: "TT,TE,EE+lowP+lensing+ext").
+# from the Planck 2018 results (paper VI, arXiv:1807.06209, Table 2, last
+# column: "TT,TE,EE+lowE+lensing+BAO").
 #
-# http://www.aanda.org/articles/aa/full_html/2016/10/aa25830-15/aa25830-15.html
+# https://arxiv.org/abs/1807.06209
 # or
-# http://adsabs.harvard.edu/abs/2016A%26A...594A..13P
+# http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1807.06209
 #
 # IMPORTANT NOTES: If you change these system-wide default values, please
 # change this comment and cite the source.
 
 # Input:
- H0              67.74
- olambda        0.6911
- omatter        0.3089
+ H0              67.66
+ olambda        0.6889
+ omatter        0.3111
  oradiation        0.0
 
 # Output:
