NoiseChisel uses outlier rejection algorithm on qthresh
Until now, the user had to manually specify a quantile to remove some tiles
from the quantile threshold interpolation step. But this solution was not
generic and too ugly (too dependent on each particular input dataset).

A new outlier identification algorithm was re-implemented in Gnuastro's
statistics library (the library function had been commented out) in the
previous commit for this purpose. With this commit, it now replaces the
manual quantile identification of NoiseChisel. To configure this new
algorithm, three new options have been added to it as described in the book
and the NEWS file.

This task was found after a great discussion with Pierre-Alain Duc on some
of his datasets during the Lorentz center workshop on "The Bewildering
Nature of Ultra-diffuse Galaxies", in Leiden, The Netherlands.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -18,32 +18,34 @@
 # warranty.
 
 # Input:
- khdu                 1
- whdu                 1
- chdu                 1
- minskyfrac         0.7
- minnumfalse        100
+ khdu                    1
+ whdu                    1
+ chdu                    1
+ minskyfrac            0.7
+ minnumfalse           100
 
 # Tessellation
- largetilesize  200,200
+ largetilesize     200,200
 
 # Detection:
- mirrordist         1.5
- modmedqdiff       0.01
- qthresh            0.3
- qthreshtilequant   1.0
- smoothwidth          3
- erode                2
- erodengb             4
- noerodequant    0.9331
- opening              1
- openingngb           8
- sigmaclip        3,0.2
- dthresh            0.0
- snminarea           10
- snquant           0.95
- detgrowquant      0.80
- detgrowmaxholesize 100
+ mirrordist            1.5
+ modmedqdiff          0.01
+ qthresh               0.3
+ qthreshoutnum          15
+ qthreshoutsigma         5
+ qthreshoutsclip     3,0.2
+ smoothwidth             3
+ erode                   2
+ erodengb                4
+ noerodequant       0.9331
+ opening                 1
+ openingngb              8
+ sigmaclip           3,0.2
+ dthresh               0.0
+ snminarea              10
+ snquant              0.95
+ detgrowquant         0.80
+ detgrowmaxholesize    100
 
 # Operating mode
- continueaftercheck   0
+ continueaftercheck      0
