Mean distance from median used for identifying signal in tiles
To identify the presence of signal in a tile, until now NoiseChisel and
Segment would use the quantile difference of the mode and median. But the
mean's shift is more sensitive to skewness (the presence of signal). It
also has another advantage that it is very easy to measure and will not
fail (unlike the mode finding algorithm which can fail). So with this
commit, in the Statistics and NoiseChisel programs, the mean is now used to
identify the presence of signal in noise.

While working and testing this change, many other issues were fixed and
implemented. Especially in the outlier finding algorithm of the recent
commits. Since the mode isn't used any more, the `--mirrordist' option was
removed from both Segment and NoiseChisel. Also the old `--modmedqdiff' was
renamed to `--meanmedqdiff'.

In the outlier rejection algorithm, the number of prior elements to use for
finding the outlier is now not an option to that function: it starts from
the median and looks half the dataset backwards. This change also
propagated into NoiseChisel and Statistic's options: the `--qthreshoutnum'
option was removed. Also, outlier rejection is now implemented in the
pseudo-detection and final Sky measurements of NoiseChisel. So to be
generic, the options were also renamed to `--outliersclip' and
`--outliersigma'.

While looking into the details of NoiseChisel, I noticed that we weren't
sigma-clipping the tile values prior to writing the Sky
measurements. Therefore the `--sigmaclip' option was redundant. It is now
properly used to reject outlier pixels.

The default `--noerodequant' was increased to 0.99 instead of 0.9331. This
had a major effect in creating bad false positives, so it is now encouraged
to decrease it on a case-by-case basis. The same goes for `--snquant' and
`--detgrowquant'. They were increased to be less prone to false positives
on shallow or mock datasets. They were mainly tuned for deep datasets with
stro

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -28,23 +28,21 @@
  largetilesize     200,200
 
 # Detection:
- mirrordist            1.5
- modmedqdiff          0.01
+ meanmedqdiff        0.005
  qthresh               0.3
- qthreshoutnum          15
- qthreshoutsigma         5
- qthreshoutsclip     3,0.2
+ outliersigma           10
+ outliersclip        3,0.2
  smoothwidth             3
  erode                   2
  erodengb                4
- noerodequant       0.9331
+ noerodequant         0.99
  opening                 1
  openingngb              8
  sigmaclip           3,0.2
  dthresh               0.0
  snminarea              10
- snquant              0.95
- detgrowquant         0.80
+ snquant              0.99
+ detgrowquant         0.90
  detgrowmaxholesize    100
 
 # Operating mode
