--- a/bin/statistics/aststatistics.conf
+++ b/bin/statistics/aststatistics.conf
@@ -21,7 +21,9 @@
 
 # Sky and its STD settings
  khdu                 1
- modmedqdiff       0.01
+ meanmedqdiff     0.005
+ outliersigma        10
+ outliersclip     3,0.2
  smoothwidth          3
  sclipparams      3,0.1
 
