--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -39,6 +39,7 @@
  minskyfrac            0.7
  sigmaclip           3,0.2
  dthresh               0.0
+ holengb                 8
  snminarea              10
  minnumfalse           100
  snquant              0.99
